# Ewha_Intelligent_Robotics

./: .gitignore  README.md
map/: ewha_office_map.pgm  ewha_office_map.yaml
src/trash_bot/: package.xml  setup.cfg  setup.py
src/trash_bot/config/: 09_amcl_params.yaml  09_bridge.yaml  09_localization.rviz  09_nav2_params.yaml  09_navigation.rviz  09_slam.rviz  09_slam_params.yaml  trash_bot.rviz  trashbot_controller.yaml
src/trash_bot/launch/: 09_localization.launch.py  09_navigation.launch.py  09_slam.launch.py  09_trash_robot.launch.py
src/trash_bot/meshes/: base_link.stl  base_link_collision.stl  body_link.stl  body_link_collision.stl
src/trash_bot/trash_bot/: 09_waypoint_navigator.py  mission_manager.py  robot_controller.py  trash_lidar_subscriber.py  trash_spawner.py
src/trash_bot/urdf/: moving_trashbot.urdf
src/trash_bot/worlds/: trash_world.sdf
